my third commit

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button onclick="calculate(3)">3</button>
         <button class="operator-btn" onclick="calculate(`/`)">/</button>
         <button onclick="calculate(0)">0</button>
-        <button  onclick="calculate(`0`)">.</button>
+        <button  onclick="calculate(`.`)">.</button>
      >
         <button  onclick="Result()"  class="calc" >=</button>
         <button class="operator-btn" onclick="clr()">C</button>
